testsuite/tests/typecheck/should_fail/tcfail217.stderr

tcfail217.hs:7:1: error:
    • Potential superclass cycle for ‘A’
        whose superclass predicates include ‘cls (Aish cls)’
    • In the class declaration for ‘A’
